sidux-hermes (0.1.7) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 01 Mar 2009 05:33:21 +0100

sidux-hermes (0.1.6) unstable; urgency=low

  * qt4: version number added to about.

 -- Fabian Wuertz <xadras@sidux.com>  Sat, 28 Feb 2009 14:42:21 +0100

sidux-hermes (0.1.5) unstable; urgency=low

  * spell fixes.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 25 Feb 2009 23:16:15 +0100

sidux-hermes (0.1.4) unstable; urgency=low

  * Italian translation added. Thanks to pinguin. 
  * Qt4: typo 

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 23 Feb 2009 19:45:34 +0100

sidux-hermes (0.1.3) unstable; urgency=low

  * fix desktop-entry-contains-encoding-key.
  * improve short descriptions.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 20 Feb 2009 17:58:56 +0100

sidux-hermes (0.1.2) unstable; urgency=low

  * sidux-hermes man pages added.
  * prealert status added.
  * qt4: reload of the upgradable packages view after an update.

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 16 Feb 2009 12:10:06 +0100

sidux-hermes (0.1.1) unstable; urgency=low

  * qt4: tooltip of the upgrade button fixed.
  * debian: missing dependency apt-show-versions added.

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 11 Feb 2009 23:04:03 +0100

sidux-hermes (0.1.0) unstable; urgency=low

  [ Fabian Wuertz ]
  * Initial release.
  * Qt4: update time changed
  * Cli: kernel function added
  * QT4: Kernel function added
  * Gtk2: conlicts tag updated
  * QT4: upgradable packages dialog added.
  * QT4: sidux-apt-qt4 options added. 
  * QT4: display upgradable packages function updated.
  * QT4: de translation updated.
  * Debian: descriptions improved. 

  [ Stefan Lippers-Hollmann ]
  * add ${misc:Depends} where needed.

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 08 Feb 2009 00:42:01 +0100